# sem4_lb3

./: CMakeLists.txt  Meloman.cpp  REAMDE.md
.github/workflows/: release.yaml
header/: AudioContent.hpp  InstrumentalTrack.hpp  MusicDisk.hpp  MusicalComposition.hpp  Song.hpp
src/: InstrumentalTrack.cpp  MusicDisk.cpp  MusicalComposition.cpp  Song.cpp
